--- a/main.tex
+++ b/main.tex
@@ -698,12 +698,11 @@ Propõe-se como projetos futuros o desenvolvimento de novas simulações virtuai
 \label{tab:questionario}
 \columnsep=5cm
 
-\hline \multicolumn{1}{|c|}{\textbf{Perguntas}} & \multicolumn{1}{c|}{\textbf{Alternativas}} 
+\cr \hline \multicolumn{1}{|c|}{\textbf{Perguntas}} & \multicolumn{1}{c|}{\textbf{Alternativas}} 
 \endfirsthead
 
-\multicolumn{3}{c}%
-{{\bfseries \tablename\ \thetable{} -- Continuação da tabela anterior}} \\
-\hline \multicolumn{1}{|c|}{\textbf{Perguntas}} &
+\multicolumn{3}{c}{{\bfseries \tablename \thetable{} -- Continuação da tabela anterior}} \\ 
+\cr \hline \multicolumn{1}{|c|}{\textbf{Perguntas}} &
 \multicolumn{1}{c|}{\textbf{Alternativas}} \\ \hline 
 \endhead
 
@@ -713,8 +712,8 @@ Propõe-se como projetos futuros o desenvolvimento de novas simulações virtuai
 \hline \hline
 \endlastfoot
     \hline
-    Na escola, você prefere/preferia & a) Arte, esportes ou atividades \\ & extracurriculares \\ & b) Cálculo, biologia ou história\\ & c) Literatura, ciências humanas ou \\ & idiomas\\ & d) Ciências da natureza ou \\ & matemática\\ & e) Não opinar
-    \hline
+    Na escola, você prefere/preferia & a) Arte, esportes ou atividades \\ & extracurriculares \\ & b) Cálculo, biologia ou história\\ & c) Literatura, ciências humanas ou \\ & idiomas\\ & d) Ciências da natureza ou \\ & matemática \\ & e) Não opinar
+    \cr \hline 
     Quais assuntos você costuma ler com mais \\ frequência & a) Política/Políticas Publicas\\ & b) Educação ou tratamento de \\ & doenças\\ & c) Economia ou problemas sociais\\ & d) Ciências e Tecnologia\\ & e) Não opinar 
     \\ \hline
     Você se descreveria como uma pessoa & a) Impulsiva e um tanto aventureira\\ & b) Cuidadosa e sempre responsável \\ & c) Entusiasmada e muito amiga\\ & d) Calma e diferente da maioria\\ & e) Não opinar
@@ -771,12 +770,12 @@ Propõe-se como projetos futuros o desenvolvimento de novas simulações virtuai
 \label{tab:ErgoList}
 \columnsep=5cm
 
-\hline 
+\cr \hline 
 \multicolumn{1}{|c|}{\textbf{Perguntas}} & \multicolumn{1}{c|}{\textbf{Alternativas}} 
 \endfirsthead
 
 \multicolumn{3}{c}%
-{{\bfseries \tablename\ \thetable{} -- Continuação da tabela anterior}} \\
+{{\bfseries \tablename\ \thetable{} -- Continuação da tabela anterior}} \\ 
 \hline \multicolumn{1}{|c|}{\textbf{Perguntas}} &
 \multicolumn{1}{c|}{\textbf{Alternativas}} \\ \hline 
 \endhead
@@ -788,30 +787,43 @@ Propõe-se como projetos futuros o desenvolvimento de novas simulações virtuai
 \endlastfoot
     \hline
     As páginas possuem denominações de menus de acordo com o que \\ eles representam? & [  ] Sim \\ & [  ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     A disposição dos objetos seguem uma ordem lógica? & [  ] Sim \\ & [  ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     O sistema fornece \textit{feedback} para todas as ações do usuário? & [  ] Sim \\ & [  ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     As denominações dos itens são breves? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     A navegação pelo \textit{software} é fácil? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     O \textit{software} proporciona a interação entre Aprendiz X Agente de \\ Aprendizagem? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     A \textit{interface} é amigável? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     As mensagens e textos das interfaces apresentam-se em língua \\ portuguesa? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     É fácil de aprender e usar? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     Você considera o \textit{software} útil? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     O erro é apontado ao aluno no software como algo negativo? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     Os contextos são adequados e atraentes? (\textit{interface}) & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
     A linguagem utilizada é apropriada e de fácil entendimento? & [  ] Sim \\ & [ ] Não \\ & [  ] Não se aplica
+    \\
     \hline
 \end{longtable}
 \end{center}
